quay-deployment/mysql56.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql56
spec:
  ports:
  - port: 3306
  selector:
    app: mysql56
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql56
spec:
  selector:
    matchLabels:
      app: mysql56
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql56
    spec:
      nodeSelector:
        quay: db
      containers:
      - image: "openshift/mysql-56-centos7"
        name: mysql56
        ports:
        - containerPort: 3306
          name: mysql
      nodeSelector:
        quay: db
