quay-deployment/mysql57.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql57
spec:
  ports:
  - port: 3306
  selector:
    app: mysql57
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql57
spec:
  selector:
    matchLabels:
      app: mysql57
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql57
    spec:
      containers:
      - image: "registry.access.redhat.com/rhscl/mysql-57-rhel7"
        name: mysql57
        ports:
        - containerPort: 3306
          name: mysql
      # nodeSelector:
      #   quay: db
