quay-deployment/quay.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: quay
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      name: https
      port: 443
      targetPort: 8443
  selector:
    quay-enterprise-component: app
