quay-deployment/quay.route.yaml
---
# Route to allow external access
apiVersion: v1
kind: Route
metadata:
  name: quay
spec:
  to:
    kind: Service
    name: quay
  tls:
    termination: passthrough
